# serializer version: 1
# name: test_switch[load_platforms0][select.device1_volume-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'high',
        'low',
        'off',
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.device1_volume',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Volume',
    'platform': 'yale_smart_alarm',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'volume',
    'unique_id': '1111-volume',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch[load_platforms0][select.device1_volume-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Device1 Volume',
      'options': list([
        'high',
        'low',
        'off',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.device1_volume',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'low',
  })
# ---
# name: test_switch[load_platforms0][select.device2_volume-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'high',
        'low',
        'off',
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.device2_volume',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Volume',
    'platform': 'yale_smart_alarm',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'volume',
    'unique_id': '2222-volume',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch[load_platforms0][select.device2_volume-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Device2 Volume',
      'options': list([
        'high',
        'low',
        'off',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.device2_volume',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'low',
  })
# ---
# name: test_switch[load_platforms0][select.device3_volume-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'high',
        'low',
        'off',
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.device3_volume',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Volume',
    'platform': 'yale_smart_alarm',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'volume',
    'unique_id': '3333-volume',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch[load_platforms0][select.device3_volume-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Device3 Volume',
      'options': list([
        'high',
        'low',
        'off',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.device3_volume',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'low',
  })
# ---
# name: test_switch[load_platforms0][select.device7_volume-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'high',
        'low',
        'off',
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.device7_volume',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Volume',
    'platform': 'yale_smart_alarm',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'volume',
    'unique_id': '7777-volume',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch[load_platforms0][select.device7_volume-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Device7 Volume',
      'options': list([
        'high',
        'low',
        'off',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.device7_volume',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'low',
  })
# ---
# name: test_switch[load_platforms0][select.device8_volume-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'high',
        'low',
        'off',
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.device8_volume',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Volume',
    'platform': 'yale_smart_alarm',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'volume',
    'unique_id': '8888-volume',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch[load_platforms0][select.device8_volume-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Device8 Volume',
      'options': list([
        'high',
        'low',
        'off',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.device8_volume',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'low',
  })
# ---
# name: test_switch[load_platforms0][select.device9_volume-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'high',
        'low',
        'off',
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.device9_volume',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Volume',
    'platform': 'yale_smart_alarm',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'volume',
    'unique_id': '9999-volume',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch[load_platforms0][select.device9_volume-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Device9 Volume',
      'options': list([
        'high',
        'low',
        'off',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.device9_volume',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'low',
  })
# ---
